# ModuCore

./: CMakeLists.txt
include/: modulib.h
plugins/plugin_sample/: CMakeLists.txt  plugin.c
src/: main.c
